# D02

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
lms/: models.py  serializers.py  tasks.py  tests.py  views.py
nginx/: Dockerfile
users/: models.py  serializers.py  tasks.py  urls.py  views.py
